--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,19 +1,14 @@
 {
-  "name": "ui",
+  "name": "@emerald/shared",
   "version": "0.0.0",
   "main": "./index.tsx",
   "types": "./index.tsx",
   "license": "MIT",
-  "scripts": {
-    "lint": "eslint \"**/*.ts*\""
-  },
+  "scripts": {},
   "devDependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "eslint": "^7.32.0",
-    "eslint-config-custom": "workspace:*",
     "react": "^17.0.2",
-    "tsconfig": "workspace:*",
     "typescript": "^4.5.2"
   }
 }
