--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "next": "13.3.4",
+    "normalize-url": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "zod": "^3.21.4"
