--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "scripts": {},
   "devDependencies": {
+    "@types/node": "18.16.3",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "react": "^17.0.2",
