--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -11,5 +11,9 @@
     "@types/react-dom": "^18.2.0",
     "react": "^17.0.2",
     "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "dangerously-set-html-content": "^1.0.13",
+    "react-frame-component": "^5.2.6"
   }
 }
