--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@emerald/shared",
+  "name": "@cardboard/shared",
   "version": "0.0.0",
   "main": "./index.tsx",
   "types": "./index.tsx",
@@ -13,7 +13,6 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "dangerously-set-html-content": "^1.0.13",
-    "react-frame-component": "^5.2.6"
+    "dangerously-set-html-content": "^1.0.13"
   }
 }
