--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@emerald/web",
+  "name": "@cardboard/web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -23,6 +23,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "zod": "^3.21.4",
-    "@emerald/shared": "workspace:*"
+    "@cardboard/shared": "workspace:*"
   }
 }
