--- a/packages/publish/package.json
+++ b/packages/publish/package.json
@@ -8,7 +8,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "tsup": "^6.7.0",
     "typescript": "^5.0.4"
