--- a/packages/publish/package.json
+++ b/packages/publish/package.json
@@ -2,7 +2,16 @@
   "name": "@sarim.garden/cardboard",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "scripts": {
     "build": "tsup --config ./tsup.config.ts"
   },
