--- a/packages/publish/package.json
+++ b/packages/publish/package.json
@@ -13,7 +13,8 @@
     }
   },
   "scripts": {
-    "build": "tsup --config ./tsup.config.ts"
+    "build": "tsup --config ./tsup.config.ts",
+    "prepublishOnly": "pnpm run build"
   },
   "keywords": [],
   "author": "",
