--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@sarim.garden/cardboard": "workspace:^",
+    "@sarim.garden/cardboard": "^1.0.4",
     "@types/node": "18.16.3",
     "@types/react": "18.2.4",
     "@types/react-dom": "18.2.3",
