--- a/packages/publish/package.json
+++ b/packages/publish/package.json
@@ -20,11 +20,17 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/react": "^18.2.4",
+    "@types/react-dom": "18.2.3",
     "tsup": "^6.7.0",
-    "typescript": "^5.0.4",
-    "@cardboard/shared": "workspace:*"
+    "typescript": "^5.0.4"
   },
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "dangerously-set-html-content": "^1.0.13",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
