--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -14,6 +14,7 @@
   },
   "scripts": {
     "build": "tsup --config ./tsup.config.ts",
+    "dev": "pnpm run build --watch",
     "prepublishOnly": "pnpm run build"
   },
   "keywords": [],
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@types/react": "^18.2.4",
     "@types/react-dom": "18.2.3",
+    "@types/react-helmet": "^6.1.6",
     "tsup": "^6.7.0",
     "typescript": "^5.0.4"
   },
