--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -32,7 +32,9 @@
   },
   "dependencies": {
     "dangerously-set-html-content": "^1.0.13",
+    "normalize-url": "^8.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-script-hook": "^1.7.2"
   }
 }
