--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "dangerously-set-html-content": "^1.0.13",
+    "jotai": "^2.0.4",
     "normalize-url": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
