--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -31,11 +31,9 @@
     "access": "public"
   },
   "dependencies": {
-    "dangerously-set-html-content": "^1.0.13",
     "jotai": "^2.0.4",
     "normalize-url": "^8.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-script-hook": "^1.7.2"
+    "react-dom": "18.2.0"
   }
 }
