--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -23,6 +23,8 @@
   "devDependencies": {
     "@types/react": "^18.2.4",
     "@types/react-dom": "18.2.3",
+    "eslint": "^8.40.0",
+    "eslint-config-custom": "workspace:*",
     "tsup": "^6.7.0",
     "typescript": "^5.0.4"
   },
