--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sarim.garden/cardboard",
-  "version": "1.1.13",
+  "version": "2.0.0",
   "description": "Embed anything from the web in your React app",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -14,6 +14,7 @@
   },
   "scripts": {
     "build": "tsup --config ./tsup.config.ts",
+    "dev": "pnpm run build --watch",
     "prepublishOnly": "pnpm run build"
   },
   "keywords": [],
@@ -22,6 +23,8 @@
   "devDependencies": {
     "@types/react": "^18.2.4",
     "@types/react-dom": "18.2.3",
+    "eslint": "^8.40.0",
+    "eslint-config-custom": "workspace:*",
     "tsup": "^6.7.0",
     "typescript": "^5.0.4"
   },
@@ -29,7 +32,7 @@
     "access": "public"
   },
   "dependencies": {
-    "dangerously-set-html-content": "^1.0.13",
+    "normalize-url": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
