--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -1,16 +1,21 @@
 {
   "name": "@sarim.garden/cardboard",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "Embed anything from the web in your React app",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "type": "module",
   "exports": {
-    ".": {
-      "require": "./dist/index.js",
-      "import": "./dist/index.mjs",
-      "types": "./dist/index.d.ts"
+    "types": "./dist/index.d.ts",
+    "import": "./dist/index.js"
+  },
+  "typesVersions": {
+    "*": {
+      "*": [
+        "./dist/*"
+      ]
     }
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "scripts": {
     "build": "tsup --config ./tsup.config.ts",
@@ -27,9 +32,6 @@
     "eslint-config-custom": "workspace:*",
     "tsup": "^6.7.0",
     "typescript": "^5.0.4"
-  },
-  "publishConfig": {
-    "access": "public"
   },
   "dependencies": {
     "normalize-url": "^8.0.0",
