--- a/packages/component/package.json
+++ b/packages/component/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sarim.garden/cardboard",
-  "version": "2.0.3",
+  "version": "2.1.3",
   "description": "Embed anything from the web in your React app",
   "type": "module",
   "exports": {
@@ -36,6 +36,7 @@
   "dependencies": {
     "normalize-url": "^8.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "rooks": "^7.14.1"
   }
 }
