--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "release": "turbo run build lint && changeset version && changeset publish"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
     "prettier": "^2.5.1",
-    "turbo": "latest"
+    "turbo": "latest",
+    "@changesets/cli": "^2.26.1"
   },
   "packageManager": "pnpm@7.15.0",
   "name": "cardboard"
